# wvs-rs3

./: Cargo.toml  test_output.txt
crates/filehub-api/: Cargo.toml
crates/filehub-api/src/: app.rs  error.rs  lib.rs  router.rs  state.rs
crates/filehub-api/src/dto/: mod.rs  request.rs  response.rs
crates/filehub-api/src/extractors/: auth.rs  mod.rs  pagination.rs  path.rs
crates/filehub-api/src/handlers/: auth.rs  file.rs  folder.rs  health.rs  mod.rs  notification.rs  permission.rs  search.rs  share.rs  storage.rs  user.rs  ws.rs
crates/filehub-api/src/middleware/: activity.rs  auth.rs  compression.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  rbac.rs
crates/filehub-auth/: Cargo.toml
crates/filehub-auth/src/: lib.rs
crates/filehub-auth/src/acl/: checker.rs  inheritance.rs  mod.rs  resolver.rs
crates/filehub-auth/src/jwt/: claims.rs  decoder.rs  encoder.rs  mod.rs
crates/filehub-auth/src/password/: hasher.rs  mod.rs  validator.rs
crates/filehub-auth/src/rabc/: mod.rs  policies.rs
crates/filehub-auth/src/rbac/: enforcer.rs
crates/filehub-auth/src/seat/: allocator.rs  limiter.rs  memory.rs  mod.rs  reconciler.rs  redis.rs
crates/filehub-auth/src/session/: cleanup.rs  manager.rs  mod.rs  store.rs
crates/filehub-cache/: Cargo.toml
crates/filehub-cache/src/: keys.rs  lib.rs  provider.rs
crates/filehub-cache/src/memory/: mod.rs  store.rs
crates/filehub-cache/src/redis/: client.rs  mod.rs  operations.rs
crates/filehub-cli/: Cargo.toml
crates/filehub-cli/src/: lib.rs  main.rs  output.rs
crates/filehub-cli/src/commands/: admin.rs  audit.rs  broadcast.rs  config.rs  folder.rs  license.rs  migrate.rs  mod.rs  serve.rs  session.rs  storage.rs  upload.rs  user.rs  worker.rs
crates/filehub-core/: Cargo.toml
crates/filehub-core/src/: error.rs  lib.rs  result.rs
crates/filehub-core/src/config/: app.rs  auth.rs  cache.rs  database.rs  license.rs  logging.rs  mod.rs  plugin.rs  realtime.rs  session.rs  storage.rs  worker.rs
crates/filehub-core/src/events/: file.rs  mod.rs  session.rs  share.rs  system.rs  user.rs
crates/filehub-core/src/traits/: cache.rs  mod.rs  plugin.rs  repository.rs  seat_allocator.rs  service.rs  storage.rs
crates/filehub-core/src/types/: filter.rs  id.rs  mod.rs  pagination.rs  response.rs  session_limit.rs  sorting.rs
crates/filehub-database/: Cargo.toml
crates/filehub-database/src/: connection.rs  lib.rs  migration.rs
crates/filehub-database/src/repositories/: audit.rs  file.rs  folder.rs  job.rs  license.rs  mod.rs  notification.rs  permission.rs  pool_snapshot.rs  session.rs  session_limit.rs  share.rs  storage.rs  user.rs
crates/filehub-entity/: Cargo.toml
crates/filehub-entity/src/: lib.rs
crates/filehub-entity/src/audit/: mod.rs  model.rs
crates/filehub-entity/src/file/: chunk.rs  metadata.rs  mod.rs  model.rs  version.rs
crates/filehub-entity/src/folder/: mod.rs  model.rs  tree.rs
crates/filehub-entity/src/job/: mod.rs  model.rs  payload.rs  status.rs
crates/filehub-entity/src/license/: checkout.rs  mod.rs  model.rs  pool.rs
crates/filehub-entity/src/notification/: category.rs  mod.rs  model.rs  preference.rs
crates/filehub-entity/src/permission/: acl.rs  action.rs  mod.rs  model.rs
crates/filehub-entity/src/presence/: mod.rs  model.rs
crates/filehub-entity/src/session/: limit.rs  mod.rs  model.rs  token.rs
crates/filehub-entity/src/share/: invite.rs  link.rs  mod.rs  model.rs
crates/filehub-entity/src/storage/: mod.rs  model.rs  provider.rs  quota.rs
crates/filehub-entity/src/user/: mod.rs  model.rs  role.rs  status.rs
crates/filehub-plugin/: Cargo.toml
crates/filehub-plugin-sdk/: Cargo.toml
crates/filehub-plugin-sdk/src/: exports.rs  lib.rs  traits.rs
crates/filehub-plugin/src/: exports.rs  lib.rs  loader.rs  macros.rs  manager.rs  prelude.rs  registry.rs  traits.rs
crates/filehub-plugin/src/api/: context.rs  events.rs  mod.rs  services.rs
crates/filehub-plugin/src/ffi/: abi.rs  mod.rs  safety.rs
crates/filehub-plugin/src/hooks/: definitions.rs  dispatcher.rs  mod.rs  registry.rs
crates/filehub-realtime/: Cargo.toml
crates/filehub-realtime/src/: lib.rs  server.rs
crates/filehub-realtime/src/bridge/: event_bridge.rs  memory_pubsub.rs  mod.rs  redis_pubsub.rs
crates/filehub-realtime/src/channel/: channel.rs  mod.rs  registry.rs  subscription.rs  types.rs
crates/filehub-realtime/src/connection/: authenticator.rs  handle.rs  heartbeat.rs  manager.rs  mod.rs  pool.rs
crates/filehub-realtime/src/message/: builder.rs  envelope.rs  mod.rs  serializer.rs  types.rs  validator.rs
crates/filehub-realtime/src/metrics/: channels.rs  connections.rs  messages.rs  mod.rs
crates/filehub-realtime/src/notification/: dedup.rs  dispatcher.rs  formatter.rs  mod.rs  persistence.rs  preferences.rs  priority.rs
crates/filehub-realtime/src/presence/: activity.rs  mod.rs  status.rs  tracker.rs
crates/filehub-realtime/src/session_control/: audit.rs  broadcast.rs  mod.rs  monitor.rs  terminator.rs
crates/filehub-service/: Cargo.toml
crates/filehub-service/src/: context.rs  lib.rs
crates/filehub-service/src/file/: download.rs  mod.rs  preview.rs  search.rs  service.rs  upload.rs  version.rs
crates/filehub-service/src/folder/: mod.rs  service.rs  tree.rs
crates/filehub-service/src/notification/: mod.rs  rules.rs  service.rs
crates/filehub-service/src/permission/: mod.rs  service.rs
crates/filehub-storage/: Cargo.toml
crates/filehub-storage/src/: lib.rs  manager.rs  transfer.rs
crates/filehub-webdav/: Cargo.toml
crates/filehub-webdav/src/: auth.rs  handler.rs  lib.rs  properties.rs  server.rs
crates/filehub-worker/: Cargo.toml
crates/filehub-worker/src/: executor.rs  lib.rs  queue.rs  runner.rs  scheduler.rs
crates/plugin-cad-converter/: Cargo.toml
crates/plugin-cad-converter/src/: config.rs  converter.rs  error.rs  executor.rs  filesystem.rs  input_resolver.rs  jupiter.rs  lib.rs  metrics.rs  models.rs  plugin.rs  processor.rs  scripting.rs
crates/plugin-flexnet/: Cargo.toml
crates/plugin-flexnet/src/: hooks.rs  lib.rs  plugin.rs
src/: main.rs
(+100 files in other folders)
