[workspace]
resolver = "2"
members = [
    "crates/filehub-core",
    "crates/filehub-entity",
    "crates/filehub-database",
    "crates/filehub-cache",
    "crates/filehub-storage",
    "crates/filehub-auth",
    "crates/filehub-service",
    "crates/filehub-realtime",
    "crates/filehub-webdav",
    "crates/filehub-worker",
    "crates/filehub-plugin",
    "crates/filehub-plugin-sdk",
    "crates/filehub-api",
    "crates/plugin-flexnet",
    "crates/plugin-cad-converter",
    "crates/filehub-cli", "crates/filehub-flexnet", "crates/filehub-cad-converter",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Suzuki FileHub Team"]
license = "MIT"
repository = "https://github.com/suzuki/filehub"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "trace",
    "limit",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "10"
argon2 = "0.5"
rand = "0.10"

# Cache
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }

# Storage
aws-sdk-s3 = "1"
aws-config = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }

# WebSocket
tokio-tungstenite = "0.28"

# WebDAV
dav-server = "0.10"

# Worker
tokio-cron-scheduler = "0.15"

# Plugin
libloading = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"

# Errors
thiserror = "2"
anyhow = "1"

# Traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.15"

# Image processing
image = "0.25"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Streaming
tokio-util = { version = "0.7", features = ["io", "codec"] }
pin-project-lite = "0.2"

# Internal crates
# filehub-core = { path = "crates/filehub-core" }
# filehub-entity = { path = "crates/filehub-entity" }
# filehub-database = { path = "crates/filehub-database" }
# filehub-cache = { path = "crates/filehub-cache" }
# filehub-storage = { path = "crates/filehub-storage" }
# filehub-auth = { path = "crates/filehub-auth" }
# filehub-service = { path = "crates/filehub-service" }
# filehub-realtime = { path = "crates/filehub-realtime" }
# filehub-webdav = { path = "crates/filehub-webdav" }
# filehub-worker = { path = "crates/filehub-worker" }
# filehub-plugin = { path = "crates/filehub-plugin" }
# filehub-plugin-sdk = { path = "crates/filehub-plugin-sdk" }
# filehub-api = { path = "crates/filehub-api" }
# plugin-flexnet = { path = "crates/plugin-flexnet" }
# plugin-cad-converter = { path = "crates/plugin-cad-converter" }
# filehub-cli = { path = "crates/filehub-cli" }

[package]
name = "suzuki-filehub"
version.workspace = true
edition.workspace = true

[[bin]]
name = "filehub-server"
path = "src/main.rs"

[dependencies]
filehub-core.workspace = true
filehub-api.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
