[package]
name = "filehub-api"
version = "0.1.0"
edition = "2024"
description = "HTTP API layer using Axum — routes, middleware, handlers, DTOs, and WebSocket upgrade for FileHub"

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-entity = { path = "../filehub-entity" }
filehub-database = { path = "../filehub-database" }
filehub-cache = { path = "../filehub-cache" }
filehub-storage = { path = "../filehub-storage" }
filehub-auth = { path = "../filehub-auth" }
filehub-service = { path = "../filehub-service" }
filehub-realtime = { path = "../filehub-realtime" }
filehub-plugin = { path = "../filehub-plugin" }
filehub-worker = { path = "../filehub-worker" }
plugin-flexnet = { path = "../plugin-flexnet" }
plugin-cad-converter = { path = "../plugin-cad-converter" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

# Errors
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Validation
validator = { workspace = true }

# Streaming
tokio-util = { workspace = true }

# Streaming
sqlx = { workspace = true }
