[package]
name = "filehub-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for FileHub administration and management"

[[bin]]
name = "filehub-cli"
path = "src/main.rs"

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-entity = { path = "../filehub-entity" }
filehub-database = { path = "../filehub-database" }
filehub-cache = { path = "../filehub-cache" }
filehub-storage = { path = "../filehub-storage" }
filehub-auth = { path = "../filehub-auth" }
filehub-realtime = { path = "../filehub-realtime" }
filehub-service = { path = "../filehub-service" }
filehub-api = { path = "../filehub-api" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
tabled = "0.20"
