[package]
name = "filehub-realtime"
version = "0.1.0"
edition = "2021"
description = "WebSocket real-time engine with pub/sub channels, notifications, presence tracking, and session control for FileHub"

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-entity = { path = "../filehub-entity" }
filehub-database = { path = "../filehub-database" }
filehub-cache = { path = "../filehub-cache" }
filehub-auth = { path = "../filehub-auth" }
filehub-service = { path = "../filehub-service" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Errors
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# Redis pub/sub (optional, for multi-node)
redis = { workspace = true, optional = true }

# Streaming/sync
tokio-util = { workspace = true }
dashmap = "5"

[features]
default = []
redis-pubsub = ["redis"]
