[package]
name = "filehub-realtime"
version = "0.1.0"
edition = "2021"
description = "WebSocket real-time engine, notifications, and presence for FileHub"

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-entity = { path = "../filehub-entity" }
filehub-database = { path = "../filehub-database" }
filehub-auth = { path = "../filehub-auth" }
filehub-service = { path = "../filehub-service" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
dashmap = "6"
