[package]
name = "filehub-storage"
version.workspace = true
edition.workspace = true
description = "Storage providers (Local, S3, WebDAV, SMB) for FileHub"

[features]
default = ["local"]
local = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
webdav-client = ["dep:reqwest"]
smb = []

[dependencies]
filehub-core.workspace = true
filehub-entity.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
futures.workspace = true

aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
