[package]
name = "filehub-webdav"
version = "0.1.0"
edition = "2021"
description = "WebDAV server (RFC 4918) for FileHub"

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-entity = { path = "../filehub-entity" }
filehub-database = { path = "../filehub-database" }
filehub-storage = { path = "../filehub-storage" }
filehub-auth = { path = "../filehub-auth" }
filehub-service = { path = "../filehub-service" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
bytes = "1"
futures = "0.3"
hyper = { version = "1", features = ["full"] }
http = "1"
http-body-util = "0.1"
base64 = "0.22"
quick-xml = { version = "0.31", features = ["serialize"] }
percent-encoding = "2"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
