[package]
name = "filehub-worker"
version = "0.1.0"
edition = "2024"
description = "Background job processing and scheduled tasks for FileHub"

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-entity = { path = "../filehub-entity" }
filehub-database = { path = "../filehub-database" }
filehub-cache = { path = "../filehub-cache" }
filehub-storage = { path = "../filehub-storage" }
filehub-auth = { path = "../filehub-auth" }
filehub-service = { path = "../filehub-service" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.10"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
