[package]
name = "plugin-cad-converter"
version = "0.1.0"
edition = "2024"
description = "TechnoStar Jupiter-based CAD-to-VTFx conversion plugin for FileHub"
authors = ["FileHub Team"]

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-plugin = { path = "../filehub-plugin" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
validator = { workspace = true }

zip = "7.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
toml = "0.9"
