[package]
name = "plugin-flexnet"
version = "0.1.0"
edition = "2021"
description = "FlexNet license integration plugin for FileHub"

[dependencies]
filehub-core = { path = "../filehub-core" }
filehub-entity = { path = "../filehub-entity" }
filehub-plugin = { path = "../filehub-plugin" }
filehub-database = { path = "../filehub-database" }
filehub-cache = { path = "../filehub-cache" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
libloading = "0.8"

[features]
default = ["mock"]
mock = []
ffi = []
